fix: 修复可以正常运行